[TAP] is T. Alexander Popiel, a former PennMUSH developer (aka Talek)
[3] refers to code by (or inspired by) TinyMUSH 3.0
[MUX] refers to code by (or inspired by) TinyMUX 2.x
[Rhost] refers to code by (or inspired by) RhostMUSH

==========================================================================

Version 1.8.4 patchlevel 7                                 ??? ??, 2011

Minor changes:
 * Rewrite memcheck allocation tracking to use a more efficient data
   structure. [SW]
 * Help file improvements, by Ender and others. [SW] [MG]
 * @decompile now uses '&attr obj=value', even for standard attributes, to
   avoid possible clashes with command names. Suggested by Mercutio. [MG]
 * Extended convtime understands timestamps of the form 'YYYY-MM-DD hh:mm:ss'.
   Suggested by Padraic. [SW]
 * pemit() now accepts a list of port numbers, to pemit to multiple ports
   at once. Suggested by Padraic. [MG]
 * Built in functions and commands can now be marked as being
   deprecated.  Using one of these functions or commands results in a
   warning to the owner of the object executing them. Deprecated
   functions and commands might be removed in future patch levels;
   code using them needs to be rewritten. [SW]

Locks:
 * New locks, @lock/filter and @lock/infilter, which must be passed (along
   with any @filter/@infilter set) for an object to forward sound. Patch
   by Padraic.
 * @elock, @eunlock, @ulock and @uunlock are deprecated. [SW]

Fixes:
 * Verified that Penn compiles using the clang compiler, and fix a few
   warnings it generated. [SW]
 * Better fix for the DBREFLIST issue fixed in p6. [SW]
 * @pemit/list stopped reporting when it failed to match an object in p5.
   Reported by Padraic. [MG]
 * 'page' evaluated its args incorrectly when used in an $-command.
   Reported by Invidia@Dune3. [MG]
 * Win32 compile fixes by Daniel Powell. [MG]
 * Fix an off-by-one error in wrap(). Report by Padraic, patch by Minion [MG]