@@ -1276,9 +1276,9 @@ See also: modulo(), fdiv()
 & DOING()
   doing(<player|descriptor>)
 
-  When given the name of a connected player or descriptor, doing()
-  returns the player's @doing. If <player> is offline, (or dark, and the
-  caller is mortal), doing() returns #-1.
+  When given the name of a player or descriptor, doing() returns the player's
+  @doing. If no matching player or descriptor is found, or the descriptor is
+  not yet connected to a player, an empty string is returned.
 
 See also: @poll, @doing, poll()
 & E()
