@@ -63,6 +63,7 @@ ATTR attr[] = {
   {"DESCRIBE", AF_PUBLIC | AF_NEARBY | AF_VISUAL | AF_NOPROG | AF_PREFIXMATCH,
    NULL_CHUNK_REFERENCE, 0,
    NULL},
+  {"DOING", AF_NOPROG | AF_PRIVATE | AF_VISUAL | AF_PUBLIC, NULL_CHUNK_REFERENCE, 0, NULL},
   {"DROP", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
   {"EALIAS", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
   {"EFAIL", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
