@@ -174,5 +174,6 @@ bool unfindable(dbref);
 #define RDBF_LOCAL_SOCKET       0x08
 #define RDBF_SSL_SLAVE          0x10
 #define RDBF_SOCKET_SRC         0x20
+#define RDBF_NO_DOING           0x40
 
 #endif                          /* __DB_H */
