@@ -350,7 +350,6 @@ struct descriptor_data {
   int quota;            /**< Quota of commands allowed */
   int cmds;             /**< Number of commands sent */
   int hide;             /**< Hide status */
-  char doing[DOING_LEN];        /**< Player's doing string */
   struct descriptor_data *next; /**< Next descriptor in linked list */
   struct descriptor_data *prev; /**< Previous descriptor in linked list */
   int conn_flags;       /**< Flags of connection (telnet status, etc.) */
